--- a/source/TwoD/Axissymmetric/axissymmetric.ipynb
+++ b/source/TwoD/Axissymmetric/axissymmetric.ipynb
@@ -17,8 +17,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2025-07-26T07:03:02.232521Z",
-     "start_time": "2025-07-26T07:03:02.215361Z"
+     "end_time": "2025-07-26T12:05:12.830895Z",
+     "start_time": "2025-07-26T12:05:12.067932Z"
     }
    },
    "source": [
@@ -27,7 +27,7 @@
     "sp.init_printing()"
    ],
    "outputs": [],
-   "execution_count": 60
+   "execution_count": 2
   },
   {
    "metadata": {},
@@ -56,8 +56,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-26T07:03:02.307344Z",
-     "start_time": "2025-07-26T07:03:02.299782Z"
+     "end_time": "2025-07-26T12:05:12.853633Z",
+     "start_time": "2025-07-26T12:05:12.844096Z"
     }
    },
    "cell_type": "code",
@@ -92,13 +92,13 @@
    ],
    "id": "52edc126770b2e52",
    "outputs": [],
-   "execution_count": 61
+   "execution_count": 3
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-26T07:03:02.371395Z",
-     "start_time": "2025-07-26T07:03:02.366274Z"
+     "end_time": "2025-07-26T12:05:12.884952Z",
+     "start_time": "2025-07-26T12:05:12.879411Z"
     }
    },
    "cell_type": "code",
@@ -108,7 +108,7 @@
    ],
    "id": "e0746910ae4ae4e9",
    "outputs": [],
-   "execution_count": 62
+   "execution_count": 4
   },
   {
    "metadata": {},
@@ -119,8 +119,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-26T07:03:02.494179Z",
-     "start_time": "2025-07-26T07:03:02.440769Z"
+     "end_time": "2025-07-26T12:05:13.790574Z",
+     "start_time": "2025-07-26T12:05:13.067025Z"
     }
    },
    "cell_type": "code",
@@ -258,7 +258,7 @@
      ]
     }
    ],
-   "execution_count": 63
+   "execution_count": 5
   },
   {
    "metadata": {},
@@ -279,8 +279,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-26T07:03:02.590297Z",
-     "start_time": "2025-07-26T07:03:02.565122Z"
+     "end_time": "2025-07-26T12:05:13.867470Z",
+     "start_time": "2025-07-26T12:05:13.837996Z"
     }
    },
    "cell_type": "code",
@@ -338,7 +338,7 @@
      ]
     }
    ],
-   "execution_count": 64
+   "execution_count": 6
   },
   {
    "metadata": {},
@@ -352,8 +352,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-26T07:03:02.677530Z",
-     "start_time": "2025-07-26T07:03:02.651020Z"
+     "end_time": "2025-07-26T12:05:14.188543Z",
+     "start_time": "2025-07-26T12:05:13.932781Z"
     }
    },
    "cell_type": "code",
@@ -429,7 +429,7 @@
      ]
     }
    ],
-   "execution_count": 65
+   "execution_count": 7
   },
   {
    "metadata": {},
@@ -440,8 +440,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-26T07:03:02.769676Z",
-     "start_time": "2025-07-26T07:03:02.742996Z"
+     "end_time": "2025-07-26T12:05:14.280499Z",
+     "start_time": "2025-07-26T12:05:14.255205Z"
     }
    },
    "cell_type": "code",
@@ -491,7 +491,37 @@
      ]
     }
    ],
-   "execution_count": 66
+   "execution_count": 8
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "### Quadrature points and weights",
+   "id": "9a600a9468f2e85a"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-07-26T12:05:14.384427Z",
+     "start_time": "2025-07-26T12:05:14.377325Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "gi_data = {\n",
+    "    1: {\n",
+    "        'point': ((1/3, 1/3),),  # midpoint of the triangle\n",
+    "        'weight': (1,)\n",
+    "    },\n",
+    "    3: {\n",
+    "        'point': ((1/6, 1/6), (4/6, 1/6), (1/6, 4/6), ),\n",
+    "        'weight': (1/3, 1/3, 1/3)\n",
+    "    },\n",
+    "}"
+   ],
+   "id": "b6bcf4700332a080",
+   "outputs": [],
+   "execution_count": 9
   },
   {
    "metadata": {},
@@ -502,23 +532,226 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-26T07:23:20.076202Z",
-     "start_time": "2025-07-26T07:23:14.054502Z"
+     "end_time": "2025-07-26T12:26:03.394092Z",
+     "start_time": "2025-07-26T12:26:03.253091Z"
     }
    },
    "cell_type": "code",
    "source": [
+    "def K_matrix_1(ng=1):\n",
+    "    \"\"\" Gauss integration, 1 or 3 integration points. This is method 1 from the book.\"\"\"\n",
+    "        # Get the symbolic B and constant D matrices\n",
+    "    B_sym = B_symbolic()\n",
+    "    D = D_matrix()\n",
+    "\n",
+    "    # Substitute the physical node coordinates into B\n",
+    "    B_element = B_sym.subs(physical_coords_map)\n",
+    "\n",
+    "    # The shape functions N(R,Z) map from natural to physical coordinates\n",
+    "    # Note: These are the isoparametric shape functions, used here only for mapping.\n",
+    "    N_map = sp.Matrix([1 - R - Z, R, Z])\n",
+    "    r_map = N_map.dot(sp.Matrix([r1, r2, r3])).subs(physical_coords_map)\n",
+    "    z_map = N_map.dot(sp.Matrix([z1, z2, z3])).subs(physical_coords_map)\n",
+    "\n",
+    "    # Element area\n",
+    "    det_J = two_A.subs(physical_coords_map) / 2\n",
+    "\n",
+    "    K = sp.zeros(ND * NNODE, ND * NNODE)\n",
+    "\n",
+    "    # Loop over the Gauss points and weights for the chosen scheme\n",
+    "    for p, w in zip(gi_data[ng]['point'], gi_data[ng]['weight']):\n",
+    "        R_gp, Z_gp = p[0], p[1]  # Gauss point in natural coordinates\n",
+    "\n",
+    "        # Find the physical coordinates (r, z) for the current Gauss point\n",
+    "        r_physical_at_gp = r_map.subs({R: R_gp, Z: Z_gp})\n",
+    "        z_physical_at_gp = z_map.subs({R: R_gp, Z: Z_gp})\n",
+    "\n",
+    "        B_evaluated = B_element.subs({'R': r_physical_at_gp, 'Z': z_physical_at_gp})\n",
+    "\n",
+    "        K += B_evaluated.T * D * B_evaluated * 2 * sp.pi * r_physical_at_gp * det_J * w\n",
+    "\n",
+    "    return K\n",
+    "\n",
+    "\n",
+    "import time\n",
+    "sta = time.time()\n",
+    "K_gauss_1pt = np.asarray(K_matrix_1(1).evalf().applyfunc(lambda x: round(x/1e12, 6)))\n",
+    "print('Time taken to calculate the stiffness matrix by 1 GP integration:', time.time() - sta)\n",
+    "\n",
+    "import time\n",
+    "sta = time.time()\n",
+    "K_gauss_3pt = np.asarray(K_matrix_1(3).evalf().applyfunc(lambda x: round(x/1e12, 6)))\n",
+    "print('Time taken to calculate the stiffness matrix by 3 GP integration:', time.time() - sta)\n",
+    "\n",
+    "\n",
+    "print(\"Stiffness matrix from 1-point Gauss quadrature (K_gauss_1pt):\")\n",
+    "print(K_gauss_1pt)\n",
+    "\n",
+    "print(\"\\nStiffness matrix from 3-point Gauss quadrature (K_gauss_3pt):\")\n",
+    "print(K_gauss_3pt)\n",
+    "\n",
+    "# Compare the integration results\n",
+    "print(\"\\nComparison of the two stiffness matrices:\")\n",
+    "import pprint\n",
+    "pprint.pprint(K_gauss_1pt / K_gauss_3pt)  # should be close to 1"
+   ],
+   "id": "e99d6dcb3619155a",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Time taken to calculate the stiffness matrix by 1 GP integration: 0.050650835037231445\n",
+      "Time taken to calculate the stiffness matrix by 3 GP integration: 0.06522560119628906\n",
+      "Stiffness matrix from 1-point Gauss quadrature (K_gauss_1pt):\n",
+      "[[3.411447 1.893011 -2.791184 -0.805537 -0.898173 -1.087474]\n",
+      " [1.893011 3.624915 -1.329135 -0.805537 -0.926367 -2.819378]\n",
+      " [-2.791184 -1.329135 3.089233 0 0.149024 1.329135]\n",
+      " [-0.805537 -0.805537 0 0.805537 0.805537 0]\n",
+      " [-0.898173 -0.926367 0.149024 0.805537 0.833730 0.120830]\n",
+      " [-1.087474 -2.819378 1.329135 0 0.120830 2.819378]]\n",
+      "\n",
+      "Stiffness matrix from 3-point Gauss quadrature (K_gauss_3pt):\n",
+      "[[3.427433 1.893011 -2.798469 -0.805537 -0.904446 -1.087474]\n",
+      " [1.893011 3.624915 -1.329135 -0.805537 -0.926367 -2.819378]\n",
+      " [-2.798469 -1.329135 3.100160 0 0.141740 1.329135]\n",
+      " [-0.805537 -0.805537 0 0.805537 0.805537 0]\n",
+      " [-0.904446 -0.926367 0.141740 0.805537 0.849716 0.120830]\n",
+      " [-1.087474 -2.819378 1.329135 0 0.120830 2.819378]]\n",
+      "\n",
+      "Comparison of the two stiffness matrices:\n",
+      "array([[0.9953359, 1.000000, 0.9973968, 1.00000, 0.993064, 1.000000],\n",
+      "       [1.000000, 1.000000, 1.000000, 1.00000, 1.00000, 1.000000],\n",
+      "       [0.9973968, 1.000000, 0.9964753, nan, 1.05139, 1.000000],\n",
+      "       [1.00000, 1.00000, nan, 1.00000, 1.00000, nan],\n",
+      "       [0.993064, 1.00000, 1.05139, 1.00000, 0.981187, 1.00000],\n",
+      "       [1.000000, 1.000000, 1.000000, nan, 1.00000, 1.000000]],\n",
+      "      dtype=object)\n"
+     ]
+    }
+   ],
+   "execution_count": 30
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-07-26T12:26:27.287563Z",
+     "start_time": "2025-07-26T12:26:24.257310Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "\n",
+    "def K_matrix_2():\n",
+    "    \"\"\"\n",
+    "    Calculates the stiffness matrix for the non-isoparametric axissymmetric element\n",
+    "    by performing a double integration over the element's physical area.\n",
+    "    \"\"\"\n",
+    "    B_sym = B_symbolic()\n",
+    "    D_sym = D_matrix()\n",
+    "    integrand = B_sym.T * D_sym * B_sym * 2 * sp.pi * R\n",
+    "    integrand_element = integrand.subs(physical_coords_map)\n",
+    "\n",
+    "    # Perform the double integration over the triangular area.\n",
+    "    # Note: In sympy, the integration variables are specified from inner to outer.\n",
+    "    K = sp.integrate(integrand_element, (Z, 0, 4 - R), (R, 3, 4))  # The order of integration is dz first, then dr. Outer integral: dr from r=3 to r=4 Inner integral: dz from z=0 to z=4-r\n",
+    "\n",
+    "    return K\n",
+    "\n",
+    "# Calculate the stiffness matrix\n",
+    "import time\n",
+    "sta = time.time()\n",
+    "K_integrated = K_matrix_2()\n",
+    "print('Time taken to calculate the stiffness matrix by double integration:', time.time() - sta)\n",
+    "print(\"The fully integrated stiffness matrix K is:\")\n",
+    "sp.pprint(K_integrated.evalf().applyfunc(lambda x: round(x/1e12, 4)))\n",
+    "\n",
+    "# comparing the results of the two methods\n",
+    "# K_e is the stiffness matrix calculated using method 3 from the book\n",
+    "# K_integrated is the stiffness matrix calculated by performing a double integration over the element's physical\n",
+    "\n",
+    "K_integrated_np = np.array(K_integrated).astype(np.float64)\n",
+    "ratio = K_gauss_3pt / K_integrated_np\n",
+    "for i in range(ratio.shape[0]):\n",
+    "    for j in range(ratio.shape[1]):\n",
+    "        print(f'Element ({i},{j}):', round(ratio[i, j], 6))\n"
+   ],
+   "id": "2b891ea48d510442",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Time taken to calculate the stiffness matrix by double integration: 2.952200412750244\n",
+      "The fully integrated stiffness matrix K is:\n",
+      "⎡3.4274    1.893   -2.7986  -0.8055  -0.9043  -1.0875⎤\n",
+      "⎢                                                    ⎥\n",
+      "⎢ 1.893   3.6249   -1.3291  -0.8055  -0.9264  -2.8194⎥\n",
+      "⎢                                                    ⎥\n",
+      "⎢-2.7986  -1.3291  3.1003      0     0.1416   1.3291 ⎥\n",
+      "⎢                                                    ⎥\n",
+      "⎢-0.8055  -0.8055     0     0.8055   0.8055      0   ⎥\n",
+      "⎢                                                    ⎥\n",
+      "⎢-0.9043  -0.9264  0.1416   0.8055   0.8497   0.1208 ⎥\n",
+      "⎢                                                    ⎥\n",
+      "⎣-1.0875  -2.8194  1.3291      0     0.1208   2.8194 ⎦\n",
+      "Element (0,0): 0.0\n",
+      "Element (0,1): 0.0\n",
+      "Element (0,2): 0.0\n",
+      "Element (0,3): 0.0\n",
+      "Element (0,4): 0.0\n",
+      "Element (0,5): 0.0\n",
+      "Element (1,0): 0.0\n",
+      "Element (1,1): 0.0\n",
+      "Element (1,2): 0.0\n",
+      "Element (1,3): 0.0\n",
+      "Element (1,4): 0.0\n",
+      "Element (1,5): 0.0\n",
+      "Element (2,0): 0.0\n",
+      "Element (2,1): 0.0\n",
+      "Element (2,2): 0.0\n",
+      "Element (2,3): nan\n",
+      "Element (2,4): 0.0\n",
+      "Element (2,5): 0.0\n",
+      "Element (3,0): 0.0\n",
+      "Element (3,1): 0.0\n",
+      "Element (3,2): nan\n",
+      "Element (3,3): 0.0\n",
+      "Element (3,4): 0.0\n",
+      "Element (3,5): nan\n",
+      "Element (4,0): 0.0\n",
+      "Element (4,1): 0.0\n",
+      "Element (4,2): 0.0\n",
+      "Element (4,3): 0.0\n",
+      "Element (4,4): 0.0\n",
+      "Element (4,5): 0.0\n",
+      "Element (5,0): 0.0\n",
+      "Element (5,1): 0.0\n",
+      "Element (5,2): 0.0\n",
+      "Element (5,3): nan\n",
+      "Element (5,4): 0.0\n",
+      "Element (5,5): 0.0\n"
+     ]
+    }
+   ],
+   "execution_count": 31
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": [
+    "\n",
     "def K_matrix_3():\n",
     "    \"\"\"\n",
     "    The stiffness matrix for the axissymmetric tri element.\n",
-    "    This is method 3 from the book.\n",
+    "    This is method 3 from the book, and the same as the 1 point Gauss integration method.\n",
     "    It evaluates the B matrix at the midpoint of the element and then calculates the stiffness matrix.\n",
     "    \"\"\"\n",
     "    # K = sp.zeros(ND * NNODE, ND * NNODE)  # the stiffness matrix\n",
     "\n",
     "    mp = midpoint\n",
-    "    print(midpoint)\n",
-    "\n",
     "    B_e = B_symbolic().subs(physical_coords_map)\n",
     "    B = B_e.subs({'R': mp[0], 'Z': mp[1]})  # evaluate B at the midpoint\n",
     "\n",
@@ -535,96 +768,9 @@
     "K_e = K_matrix_3()\n",
     "K_e_formatted = K_e.applyfunc(lambda x: (x/1e12).round(4))\n",
     "print(\"The stiffness matrix K_3 for this element:\")\n",
-    "sp.pprint(K_e_formatted)\n",
-    "\n",
-    "def K_matrix_2():\n",
-    "    \"\"\"\n",
-    "    Calculates the stiffness matrix for the non-isoparametric axissymmetric element\n",
-    "    by performing a double integration over the element's physical area.\n",
-    "    \"\"\"\n",
-    "    # Get the symbolic B and D matrices from the non-isoparametric formulation.\n",
-    "    # B is a function of physical coordinates R and Z.\n",
-    "    B_sym = B_symbolic()\n",
-    "    D_sym = D_matrix()\n",
-    "\n",
-    "    # The integrand for the stiffness matrix is B.T * D * B * 2 * pi * r.\n",
-    "    # The variable for r in your B_symbolic function is R.\n",
-    "    # The variable for z is Z.\n",
-    "    integrand = B_sym.T * D_sym * B_sym * 2 * sp.pi * R\n",
-    "\n",
-    "    # Substitute the known physical coordinates of the nodes into the integrand.\n",
-    "    integrand_element = integrand.subs(physical_coords_map)\n",
-    "\n",
-    "    # Perform the double integration over the triangular area.\n",
-    "    # The order of integration is dz first, then dr.\n",
-    "    # Outer integral: dr from r=3 to r=4\n",
-    "    # Inner integral: dz from z=0 to z=4-r\n",
-    "    # Note: In sympy, the integration variables are specified from inner to outer.\n",
-    "    K = sp.integrate(integrand_element, (Z, 0, 4 - R), (R, 3, 4))\n",
-    "\n",
-    "    return K\n",
-    "\n",
-    "# Calculate the stiffness matrix\n",
-    "K_integrated = K_matrix_2()\n",
-    "print(\"The fully integrated stiffness matrix K is:\")\n",
-    "sp.pprint(K_integrated.evalf().applyfunc(lambda x: round(x/1e12, 4)))\n",
-    "\n",
-    "# comparing the results of the two methods\n",
-    "# K_e is the stiffness matrix calculated using method 3 from the book\n",
-    "# K_integrated is the stiffness matrix calculated by performing a double integration over the element's physical\n",
-    "Ke = np.array(K_e).astype(np.float64)\n",
-    "K_integrated_np = np.array(K_integrated).astype(np.float64)\n",
-    "print(Ke / K_integrated_np)  # should be close to 1\n"
+    "sp.pprint(K_e_formatted)"
    ],
-   "id": "2b891ea48d510442",
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(3.3333333333333335, 0.3333333333333333)\n",
-      "The stiffness matrix K_3 for this element:\n",
-      "⎡3.4114    1.893   -2.7912  -0.8055  -0.8982  -1.0875⎤\n",
-      "⎢                                                    ⎥\n",
-      "⎢ 1.893   3.6249   -1.3291  -0.8055  -0.9264  -2.8194⎥\n",
-      "⎢                                                    ⎥\n",
-      "⎢-2.7912  -1.3291  3.0892      0      0.149   1.3291 ⎥\n",
-      "⎢                                                    ⎥\n",
-      "⎢-0.8055  -0.8055     0     0.8055   0.8055      0   ⎥\n",
-      "⎢                                                    ⎥\n",
-      "⎢-0.8982  -0.9264   0.149   0.8055   0.8337   0.1208 ⎥\n",
-      "⎢                                                    ⎥\n",
-      "⎣-1.0875  -2.8194  1.3291      0     0.1208   2.8194 ⎦\n",
-      "The fully integrated stiffness matrix K is:\n",
-      "⎡3.4274    1.893   -2.7986  -0.8055  -0.9043  -1.0875⎤\n",
-      "⎢                                                    ⎥\n",
-      "⎢ 1.893   3.6249   -1.3291  -0.8055  -0.9264  -2.8194⎥\n",
-      "⎢                                                    ⎥\n",
-      "⎢-2.7986  -1.3291  3.1003      0     0.1416   1.3291 ⎥\n",
-      "⎢                                                    ⎥\n",
-      "⎢-0.8055  -0.8055     0     0.8055   0.8055      0   ⎥\n",
-      "⎢                                                    ⎥\n",
-      "⎢-0.9043  -0.9264  0.1416   0.8055   0.8497   0.1208 ⎥\n",
-      "⎢                                                    ⎥\n",
-      "⎣-1.0875  -2.8194  1.3291      0     0.1208   2.8194 ⎦\n",
-      "[[0.99534093 1.         0.99735867 1.         0.9932404  1.        ]\n",
-      " [1.         1.         1.         1.         1.         1.        ]\n",
-      " [0.99735867 1.         0.99642361        nan 1.05219125 1.        ]\n",
-      " [1.         1.                nan 1.         1.                nan]\n",
-      " [0.9932404  1.         1.05219125 1.         0.9812068  1.        ]\n",
-      " [1.         1.         1.                nan 1.         1.        ]]\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\jkbgbr\\AppData\\Local\\Temp\\ipykernel_17396\\1767369459.py:67: RuntimeWarning: invalid value encountered in divide\n",
-      "  print(Ke / K_integrated_np)  # should be close to 1\n"
-     ]
-    }
-   ],
-   "execution_count": 78
+   "id": "384c3369194ff987"
   },
   {
    "metadata": {},
